Sistema ajustado, funcionando